[package]
name = "axum-swagger-ui"
version = "0.3.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/axum-swagger-ui"
repository = "https://github.com/tyrchen/axum-swagger-ui"
homepage = "https://github.com/tyrchen/axum-swagger-ui"
description = """
A simple swagger ui integration for axum
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["axum", "swagger", "openapi"]

[dependencies]
